--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".ViewActivity"></activity>
+        <activity android:name=".OrderActivity"></activity>
+        <activity android:name=".OrderListActivity" />
+        <activity android:name=".BasketActivity" />
+        <activity android:name=".DetailActivity" />
+        <activity android:name=".MenuActivity" />
         <activity android:name=".ScanQR" />
         <activity android:name=".HomeActivity" />
         <activity android:name=".MainActivity">
